--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+/IodemBot/bin/Debug/Logs
+/ColossoTest
+/.vs/IodemBot/v15
+/IodemBot/~$IodemClassSheet.xlsx
+/packages
