--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ dkms.conf
 /packages
 /IodemBot/bin
 /IodemBot/obj
+/IodemBot/Resources/config.json
+/IodemBot/Resources/config-Medoi.json
+/IodemBot/Resources/config-Iodem.json
+/IodemBot/Resources/accounts.json
