--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ dkms.conf
 /IodemBot/Resources/config-Medoi.json
 /IodemBot/Resources/config-Iodem.json
 /IodemBot/Resources/accounts.json
+/.vs/slnx.sqlite-journal
