--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -313,20 +313,44 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="Resources\accounts.json" />
-    <None Include="Resources\AdeptClassSeries.json" />
-    <None Include="Resources\bronzeFighters.json" />
-    <None Include="Resources\Colors.json" />
+    <None Include="Resources\accounts.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\AdeptClassSeries.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\bronzeFighters.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\Colors.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\config-Iodem.json" />
     <None Include="Resources\config-Medoi.json" />
-    <None Include="Resources\config.json" />
-    <None Include="Resources\goldFighters.json" />
-    <None Include="Resources\healpsy.json" />
-    <None Include="Resources\movepools.json" />
-    <None Include="Resources\offpsy.json" />
-    <None Include="Resources\silverFighters.json" />
-    <None Include="Resources\statpsy.json" />
-    <None Include="Resources\stats.json" />
+    <None Include="Resources\config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\goldFighters.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\healpsy.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\movepools.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\offpsy.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\silverFighters.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\statpsy.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\stats.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="SystemLang\quotes.json" />
   </ItemGroup>
   <ItemGroup>
