--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -276,6 +276,8 @@
     <Compile Include="Modules\GoldenSunMechanics\Effects\ChanceToOHKOEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\ConditionEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\CounterEffect.cs" />
+    <Compile Include="Modules\GoldenSunMechanics\Effects\PPDrainEffect.cs" />
+    <Compile Include="Modules\GoldenSunMechanics\Effects\HPDrainEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\IEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\MayIgnoreDefenseEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\MultiplyDamageEffect.cs" />
