--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -254,10 +254,18 @@
     <Compile Include="Extensions\EmbedBuilderExtension.cs" />
     <Compile Include="Extensions\IEnumerableExt.cs" />
     <Compile Include="Extensions\ItemListExtension.cs" />
+    <Compile Include="Extensions\MoveExt.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MessageHandler.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleCollector.cs" />
     <Compile Include="Modules\ColossoBattles\ColossoPvE.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\BattleManager.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\EndlessBattleManager.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\GauntletBattleManager.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\GoliathBattleManager.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\PvEBattleManager.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\PvPBattleManager.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\SingleBattleManager.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\TeamBattleManager.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Classes\AdeptClass.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Classes\AdeptClassSeries.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Classes\AdeptClassSeriesManager.cs" />
