--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -258,14 +258,14 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MessageHandler.cs" />
     <Compile Include="Modules\ColossoBattles\ColossoPvE.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleManagers\BattleManager.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\EndlessBattleManager.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\GauntletBattleManager.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\GoliathBattleManager.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\PvEBattleManager.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\PvPBattleManager.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\SingleBattleManager.cs" />
-    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\TeamBattleManager.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\BattleEnvironment.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\EndlessBattleEnvironment.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\GauntletBattleEnvironment.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\GoliathBattleEnvironment.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\PvEEnvironment.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\PvPEnvironment.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvE\SingleBattleEnvironment.cs" />
+    <Compile Include="Modules\ColossoBattles\BattleManagers\PvP\TeamBattleEnvironment.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Classes\AdeptClass.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Classes\AdeptClassSeries.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Classes\AdeptClassSeriesManager.cs" />
@@ -290,6 +290,7 @@
     <Compile Include="Modules\GoldenSunMechanics\Effects\ChanceToOHKOEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\ConditionEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\CounterEffect.cs" />
+    <Compile Include="Modules\GoldenSunMechanics\Effects\MysticCallEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\PPDrainEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\HPDrainEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\IEffect.cs" />
