Minor Resource changes

--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -364,6 +364,7 @@
     <None Include="Resources\GoldenSun\Battles\dungeons.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Resources\GoldenSun\Battles\dungeontest.json" />
     <None Include="Resources\GoldenSun\Battles\enemies.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
