Match json to new format

--- a/IodemBot/IodemBot.csproj
+++ b/IodemBot/IodemBot.csproj
@@ -288,6 +288,9 @@
     <Compile Include="Modules\GoldenSunMechanics\Classes\Requirements\SoloBattleRequirement.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Classes\Requirements\TeammatesRequirement.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Classes\Requirements\UnlockedClassesRequirement.cs" />
+    <Compile Include="Modules\GoldenSunMechanics\DjinnAndSummons\Djinn.cs" />
+    <Compile Include="Modules\GoldenSunMechanics\DjinnAndSummons\DjinnCommands.cs" />
+    <Compile Include="Modules\GoldenSunMechanics\DjinnAndSummons\Summon.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\AddDamageEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\AttackWithTeammateEffect.cs" />
     <Compile Include="Modules\GoldenSunMechanics\Effects\BreakEffect.cs" />
