--- a/IodemBot/packages.config
+++ b/IodemBot/packages.config
@@ -12,12 +12,19 @@
   <package id="Discord.Net.Webhook" version="2.1.1" targetFramework="net472" />
   <package id="Discord.Net.WebSocket" version="2.1.1" targetFramework="net472" />
   <package id="JsonSubTypes" version="1.6.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Serilog" version="2.3.0" targetFramework="net472" />
+  <package id="Serilog.Extensions.Logging" version="2.0.2" targetFramework="net472" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
@@ -51,6 +58,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
@@ -68,5 +76,20 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="TwitchLib" version="3.0.1" targetFramework="net472" />
+  <package id="TwitchLib.Api" version="3.0.0" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Enums" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Interfaces" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Api.Core.Models" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Api.Helix" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Api.Helix.Models" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Api.V5" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Api.V5.Models" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Client" version="3.0.3" targetFramework="net472" />
+  <package id="TwitchLib.Client.Enums" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Client.Models" version="1.1.0" targetFramework="net472" />
+  <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net472" />
+  <package id="TwitchLib.PubSub" version="3.0.2" targetFramework="net472" />
   <package id="WebSocket4Net" version="0.15.2" targetFramework="net472" />
 </packages>
