--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ dkms.conf
 /IodemBot/~$IodemClassSheet (version 1).xlsx
 /IodemBot/Resources/twitch.json
 /IodemBot/IodemBot.csproj.user
+/IodemBot/Resources/Accounts/accounts_iodem.json
